css/main.css
body {
  font-size: 13px;
  font-family: 'Lato', sans-serif;
  font-weight: 400;
  padding-bottom: 20px;
}

.site-header {
  margin-top: 20px;
}

.logo img {
  width: 60px;
  max-width: 100%;
}

.color-image {
  margin: 0 auto;
}

.color-image img {
  display: block;
  width: 66.67%;
}

figcaption {
  text-align: center;
}

h1.dev-name {
  margin-top: 0;
  text-transform: uppercase;
  font-weight: 300;
}

.dev-info {
  text-align: right;
}

img {
  width: 100%;
}

h2.featured-title {
  padding-left: 15px;
}

div.markup-image {
  border-top: 2px solid gray;
  padding-top: 15px;
}

@media screen and (max-width: 480px) {
  body {
    font-size: 10px;
  }

  h1.dev-name {
    font-size: 1.5em;
  }

  h2.featured-title {
    font-size: 1.2em;
  }

  p.dev-title, h3.article-title {
    font-size: 1.1em;
  }

  p.dev-title {
    margin-top: 5px;
  }
}

@media screen and (max-width: 600px) {
  figcaption {
    font-size: 0.7em;
    margin: 3px 0;
  }

  .color-image img {
    margin: 0 0 0 auto;
  }
}

@media screen and (min-width: 601px) {
  figcaption {
    font-size: 1em;
    margin: 5px 0;
  }

  .color-image img {
    margin: 0 auto;
  }
}

